--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.15.19",
+    "@mui/styles": "^5.16.6",
     "@mui/system": "^5.16.0",
     "@mui/x-data-grid": "^7.11.1",
     "@reduxjs/toolkit": "^2.2.5",
