--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@mui/styles": "^5.16.6",
     "@mui/system": "^5.16.0",
     "@mui/x-data-grid": "^7.11.1",
+    "@mui/x-date-pickers": "^7.12.1",
+    "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "debounce": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.3.1",
