whole code converted into typescript,ARIA role add,Custom font/ttf add

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_BASE_URL=http://localhost:5001/api/users  
-REACT_APP_BASE_URL=https://redux-backend.vercel.app/api
+REACT_APP_BASE_URL=http://localhost:5001/api 
+# REACT_APP_BASE_URL=https://redux-backend.vercel.app/api
