--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
+// {
+//   "nuxt.isNuxtApp": false
+// }
 {
-    "nuxt.isNuxtApp": false
+  "nuxt.isNuxtApp": false,
+  // "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "files.autoSave": "onWindowChange",
+  "typescript.tsdk": "node_modules/typescript/lib",
+  // "prettier.requireConfig": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "prettier.requireConfig": true
 }
