--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,18 @@
 {
-    "compilerOptions": {
-      "jsx": "react", // or "react-jsx" for React 17+
-      "strict": true,
-      "esModuleInterop": true,
-      "target": "es6",
-      "module": "commonjs",
-      "baseUrl": "./src"
-    },
-    "include": ["src/**/*", "Addusersfromfab.js", "Edituser.js", "Login1.js", "Logout1.js"],
-    "exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "jsx": "react", // or "react-jsx" for React 17+
+    "strict": true,
+    "esModuleInterop": true,
+    "target": "es6",
+    "module": "commonjs",
+    "baseUrl": "./src"
+  },
+  "include": [
+    "src/**/*",
+    "Addusersfromfab.js",
+    "Edituser.js",
+    "Login1.js",
+    "Logout1.js"
+  ],
+  "exclude": ["node_modules"]
+}
